##Text encoding: utf-8

2007-05-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* glade/paint/H-pos.glade: fixed buttons names.
	* libs/gcp/Hposdlg.cc: force atom update after a change.
	* libs/gcp/atom.cc: fixed typo in Save and force update
	when loading.
	* templates/paint/haworth.xml.in: updated (Julian Sikorski).

2007-05-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* Makefile.am: remove pc file.
	* configure.ac: add reactions plugin.
	* gcu-unstable.pc.in: cleaned.
	* glade/paint/Makefile.am: add H-pos.glade. [#19842]
	* glade/paint/H-pos.glade: ditto.
	* glade/paint/preferences.glade: fixed bounds for
	all spin buttons. [#19845]
	* libs/gcp/Hposdlg.cc: allow changing the position of
	hydrogen atoms. [#19842]
	* libs/gcp/Hposdlg.h: ditto.
	* libs/gcp/Makefile.am: add new Hposdlg.*. [#19842]
	and add LOCALEDR and GLADEDIR to DEFS.
	* libs/gcp/about.cc: fixed path to logo.
	* libs/gcp/atom.cc: fixed memory leaks in BuildContextualMenu,
	allow changing the position of hydrogen atoms. [#19842]
	* libs/gcp/atom.h: allow changing the position of
	hydrogen atoms. [#19842]
	* libs/gcp/bond.cc: fixed memory leaks in BuildContextualMenu.
	* libs/gcp/docprop.cc: use GLADEDIR.
	* libs/gcp/mesomery.cc: fixed memory leaks in BuildContextualMenu.
	* libs/gcp/molecule.cc: ditto.
	* libs/gcp/newfiledlg.cc: use GLADEDIR.
	* libs/gcp/preferences.cc: ditto.
	* libs/gcp/reactant.cc: fixed memory leaks in BuildContextualMenu.
	* libs/gcp/reaction-arrow.h:
	* libs/gcp/reaction.cc:
	* libs/gcp/stringdlg.cc: use GLADEDIR.
	* libs/gcp/theme.cc: use LOCALEDIR.
	* libs/gcp/theme.cc: fixed crashers and use GLADEDIR.
	* libs/gcp/tool.h: add some doc.
	* libs/gcp/tools.cc: use GLADEDIR.
	* libs/gcp/view.cc: don't keep zombies in gcpWidgetData::Items.
	Fixes crashes. [#19840]
	* libs/gcp/widgetdata.cc: fixed gcp xml namespace.
	* libs/gcp/window.cc: fixed a memory leak.
	* libs/gcu/object.cc: add support to modify contextual menus
	from outside the class code.