@@ -8,6 +8,7 @@ Contributors
 	Jordan Mantha <jordan at laserjock dot us>
 	Nestor Diaz: graphics (icon, logo)
 	Serge Moreau: templates
+	Julian Sikorski: templates
 
 Translators
 	Ben Luo (Chinese)
